--- a/news_flutter/news_flutter/android/app/src/main/AndroidManifest.xml
+++ b/news_flutter/news_flutter/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.news_flutter">
    <application
-        android:label="news_flutter"
+        android:label="30sec News"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
