--- a/news_flutter/news_flutter/pubspec.yaml
+++ b/news_flutter/news_flutter/pubspec.yaml
@@ -35,11 +35,25 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   url_launcher: ^6.0.20
+  flutter_native_splash: ^2.1.1
+  flutter_launcher_icons: ^0.9.2  
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_native_splash:
+  color: "#2175BF"
+  image: "assets/app/splash.png"
+  android: true
+  ios: true
+
+flutter_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/app/icon.png"
+  remove_alpha_ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,7 +75,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/images/
+  - assets/
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
