--- a/news_flutter/news_flutter/pubspec.yaml
+++ b/news_flutter/news_flutter/pubspec.yaml
@@ -77,7 +77,12 @@ flutter:
   assets:
   - assets/
   
-
+  fonts:
+     - family: Montserrat
+       fonts:
+         - asset: fonts/Montserrat-Regular.ttf
+         - asset: fonts/Montserrat-Italic.ttf
+           style: italic         
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
